<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="lu.fisch.canze.activities.DrivingAdvancedActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TableRow>
            <TextView
                android:layout_weight="0.7"
                android:width="0dp"
                android:text="@string/label_EngineFanSpeed" />

            <TextView
                android:id="@+id/text_EFS"
                android:layout_weight="0.3"
                android:width="0dp"
                android:gravity="end"
                android:text="@string/default_Dash" />
        </TableRow>

        <TableRow
            android:id="@+id/textLabel_climatePower"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_weight="0.7"
                android:text="@string/label_ThermalComfortPower"
                android:width="0dp" />

            <TextView
                android:id="@+id/text_ClimatePower"
                android:layout_weight="0.3"
                android:width="0dp"
                android:gravity="end"
                android:text="@string/default_Dash" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_weight="0.7"
                android:width="0dp"
                android:text="@string/label_HVBatConditioningMode" />

            <TextView
                android:id="@+id/text_HCM"
                android:layout_weight="0.3"
                android:width="0dp"
                android:gravity="end"
                android:text="@string/default_Dash" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_weight="0.7"
                android:width="0dp"
                android:text="@string/label_ClimaLoopMode" />

            <TextView
                android:id="@+id/text_CLM"
                android:layout_weight="0.3"
                android:width="0dp"
                android:gravity="end"
                android:text="@string/default_Dash" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_weight="0.7"
                android:width="0dp"
                android:text="@string/label_IH_ClimComp" />

            <TextView
                android:id="@+id/text_CRPM"
                android:layout_weight="0.3"
                android:width="0dp"
                android:gravity="end"
                android:text="@string/default_Dash" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_weight="0.7"
                android:width="0dp"
                android:text="@string/label_HvTemp" />

            <TextView
                android:id="@+id/text_battTemp"
                android:layout_weight="0.3"
                android:width="0dp"
                android:gravity="end"
                android:text="@string/default_Dash" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_weight="0.7"
                android:width="0dp"
                android:text="@string/label_AvChPwrOneLine" />

            <TextView
                android:id="@+id/text_chgPwr"
                android:layout_weight="0.3"
                android:width="0dp"
                android:gravity="end"
                android:text="@string/default_Dash" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_weight="0.7"
                android:width="0dp"
                android:text="@string/label_DcPwr" />

            <TextView
                android:id="@+id/text_dcPwr"
                android:layout_weight="0.3"
                android:width="0dp"
                android:gravity="end"
                android:text="@string/default_Dash" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_weight="0.7"
                android:width="0dp"
                android:text="@string/label_StateOfCharge" />

            <TextView
                android:id="@+id/text_soc"
                android:layout_weight="0.3"
                android:width="0dp"
                android:gravity="end"
                android:text="@string/default_Dash" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_weight="0.7"
                android:width="0dp"
                android:text="@string/label_GroundResistanceOhm" />

            <TextView
                android:id="@+id/text_ground"
                android:layout_weight="0.3"
                android:width="0dp"
                android:gravity="end"
                android:text="@string/default_Dash" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_weight="0.7"
                android:width="0dp"
                android:text="@string/label_AvEner" />

            <TextView
                android:id="@+id/text_energy"
                android:layout_weight="0.3"
                android:width="0dp"
                android:gravity="end"
                android:text="@string/default_Dash" />
        </TableRow>

    </TableLayout>



    <!-- debug line -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_debug" />

        <TextView
            android:id="@+id/textDebug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_debug" />

    </LinearLayout>

</LinearLayout>